<resources>
    <string name="app_name">SingOriginal</string>

    <string name="place_holder">占位</string>

    <string name="music_lib">乐库</string>
    <string name="channel">频道</string>
    <string name="dynamic">动态</string>
    <string name="me">我的</string>

    <string name="recommend">推荐</string>
    <string name="song_list">歌单</string>
    <string name="top_list">排行榜</string>
    <string name="square">广场</string>
    <string name="attention">关注</string>
    <string name="total">全部</string>
    <string name="newest">最新</string>
    <string name="hottest">最热</string>
    <string name="immediateExperience">立即体验</string>
    <string name="channelNoAttention">您还没有关注任何频道哦~</string>
    <string name="dynamicNoAttention">快关注喜爱的音乐人, 获取独家的最新动态 !</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="message_notification">消息通知</string>
    <string name="fortune_center">财富中心</string>
    <string name="upload_song">上传歌曲</string>
    <string name="local_song">本地音乐</string>
    <string name="mysong">我的作品</string>
    <string name="mysonglist">我的歌单</string>
    <string name="collect_song">收藏歌曲</string>
    <string name="download">下载</string>
    <string name="settings">设置</string>
    <string name="musician">音乐人</string>
    <string name="daily_recommend">每日推荐</string>
    <string name="original_rank">原创音乐榜</string>
    <string name="more">更多</string>
    <string name="hot_list">热门歌单</string>
    <string name="live_room">LIVE直播</string>
    <string name="music_topic">音乐专题</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shrink">收起</string>
    <string name="nickname">昵称</string>
    <string name="time">时间</string>
    <string name="textIcon">图片</string>
    <string name="songName">歌名</string>
    <string name="content">内容</string>
    <string name="laudNum">赞个数</string>
    <string name="publishOriginal">发布了一首原创</string>
    <string name="publishCover">发布了一首翻唱</string>
    <string name="commentNum">评论个数</string>
    <string name="goldBean">金豆数</string>
    <string name="beanNum">豆豆数</string>
    <string name="songBeanNum">歌豆数</string>
    <string name="happyBean">乐豆数</string>
    <string name="aFew">颗</string>
    <string name="recharge">充值</string>
    <string name="zeroNum">0</string>
    <string name="exchange">兑换</string>
    <string name="buySong">已购买歌曲</string>
    <string name="fortuneRecord">财富记录</string>
    <string name="select_category">选择分类</string>
    <string name="music_rank">5sing音乐排行榜</string>

    <string name="uploadSongs">上传歌曲列表</string>
    <string name="scanButton">开始扫描</string>
    <string name="startScan">点击按钮开始扫描</string>
    <string name="notGet">尚未获取本地歌曲文件</string>
    <string name="defaultUploadSongs">手机端上传歌曲,让大家听到你的歌声吧!</string>
    <string name="alterInfo">修改个人信息</string>
    <string name="realAuthentication">实名认证</string>
    <string name="noAuthentication">暂未认证</string>
    <string name="bind">绑定</string>
    <string name="clearCache">清除缓存</string>
    <string name="downloadPath">歌曲下载路径</string>
    <string name="qualitySelect">音质选择</string>
    <string name="timeClose">定时关闭</string>
    <string name="receiveInfo">接收推送消息</string>
    <string name="feedback">意见反馈</string>
    <string name="checkNew">检查新版本</string>
    <string name="latestVersion">已是最新版本</string>
    <string name="share">分享5sing</string>
    <string name="helpCenter">帮助中心</string>
    <string name="aboutSongs">关于5sing原创音乐</string>
    <string name="copyrightProtection">版权保护</string>
    <string name="exitAccount">退出当前账号</string>

    <string name="publishDynamic">发布动态</string>
    <string name="publish">发布</string>
    <string name="shareHappy">分享快乐的事情</string>
    <string name="addIcon">添加照片</string>
    <string name="publishNumSize">150</string>
    <string name="info">消息</string>
    <string name="songCollection">歌曲收藏</string>
    <string name="totalPlay">全部播放</string>
    <string name="attentionChannel">关注频道</string>
    <string name="common">共</string>
    <string name="few">首</string>
    <string name="comment">评论</string>
    <string name="singer">歌手:</string>
    <string name="moreComment">更多热评...</string>
    <string name="attentionNum">关注人数:</string>
    <string name="no_net">无网络连接</string>
    <string name="no_net_warn">少侠你家网络断了!</string>
    <string name="no_net_check">快检查网络,点击屏幕刷新</string>
    <string name="songComment">歌曲评论</string>
    <string name="speakWhat">说点什么吧</string>
    <string name="send">发送</string>
    <string name="writeSms">写信</string>
    <string name="Original">原创</string>
    <string name="cover">翻唱</string>
    <string name="addSong">+ 添加歌单</string>
    <string name="accompaniment">伴奏</string>
    <string name="headerIcon">头像</string>
    <string name="sex">性别</string>
    <string name="nnNum">55952083</string>
    <string name="location">所在地</string>
    <string name="HeNan">河南省</string>
    <string name="Zz">郑州市</string>
    <string name="introduce">简介</string>
    <string name="onlyOne">(只可以更改一次)</string>
    <string name="man">男</string>
    <string name="bindAccount">账号绑定</string>
    <string name="bindEmail">绑定邮箱</string>
    <string name="bindPhone">绑定手机号</string>
    <string name="alreadyBind">已绑定</string>
    <string name="noBind">未绑定</string>
    <string name="selectOnline">选择在线播放音质</string>
    <string name="selectDefault">选择默认下载音质</string>
    <string name="automaticSelect">自动选择</string>
    <string name="smoothQuality">流畅音质</string>
    <string name="clearQuality">清晰音质</string>
    <string name="liveQuality">高清音质</string>
    <string name="copyrightNotice">版权声明</string>
    <string name="complaintGuidelines">版权保护投诉指引</string>
    <string name="version">V6.0.1</string>
    <string name="websiteAddress">官网地址 : 5sing.kugou.com</string>
    <string name="copyright">版权所有©2004-2016广州酷狗计算机科技有限公司</string>
    <string name="softwareLicense">5sing音乐软件许可及服务协议</string>
    <string name="originalMusic">5sing原创音乐</string>
    <string name="recordUpload">录歌及上传</string>
    <string name="browsePublish">浏览与发布</string>
    <string name="supportCard">支持卡使用</string>
    <string name="accountSafe">账号与安全</string>
    <string name="lrcKrc">动态lrc歌词制作教程</string>
    <string name="yourSuggestions">告诉我们您的意见和建议</string>
    <string name="inputContactWay">请输入联系方式 ( 电话打不起 , 我只要QQ号 )</string>
    <string name="commit">提交</string>
    <string name="screenshotUnderstand">将问题截图会更方便理解您的情况哦</string>
    <string name="cancel">取消</string>
    <string name="certificatePhotos">证件扫描照片</string>
    <string name="yetAdd">暂未添加</string>
    <string name="nameOrganization">姓名机构名称</string>
    <string name="inputNameOrOrganization">请输入姓名/个人机构全称</string>
    <string name="identificationNum">证件号码</string>
    <string name="ID">身份证</string>
    <string name="soldierCard">士兵证</string>
    <string name="studentIDCard">学生证</string>
    <string name="passport">护照</string>
    <string name="businessLicense">营业执照</string>
    <string name="inputIDNum">请输入18位身份证号码</string>
    <string name="phoneNum">手机号码</string>
    <string name="inputPhoneNum">请输入11位手机号码</string>
    <string name="contactAddress">联系地址</string>
    <string name="star">*</string>
    <string name="timeOne">15分钟</string>
    <string name="timeTwo">30分钟</string>
    <string name="timeThree">45分钟</string>
    <string name="timeFour">60分钟</string>
    <string name="timeFive">90分钟</string>
    <string name="inputDetailedAddress">请输入您的详细地址</string>
    <string name="understandBenefits">了解实名认证的好处 ></string>
    <string name="prompt">提示</string>
    <string name="sure">确定</string>
    <string name="isExitAccount">是否退出当前账号?</string>
    <string name="isClearCache">确定清除缓存?</string>
    <string name="isExitCommit">填了这么多 , 真的放弃提交吗?</string>
    <string name="search">搜索</string>
    <string name="searchRecord">搜索记录</string>
    <string name="searchKey">搜索关键词</string>
    <string name="headIconSong">这家伙很懒 , 还没有制作歌词哦</string>
    <string name="mySongText">赶紧创建喜欢的歌单吧</string>
    <string name="reply">回复</string>
    <string name="like">收藏到歌单</string>
    <string name="downloadsong">下载歌曲</string>
    <string name="song_reply">歌曲评论</string>
    <string name="share_song">分享歌曲</string>
    <string name="song_detail">歌曲详情</string>
    <string name="homepage">会员主页</string>
    <string name="addto">添加到</string>
    <string name="new_songlist">新建歌单</string>
    <string name="weixin_friendsgroup">微信朋友圈</string>
    <string name="weixin_friend">微信好友</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="qq_zone">QQ空间</string>
    <string name="qq_friend">QQ好友</string>
    <string name="copy_link">复制链接</string>
    <string name="mycollection">我的收藏</string>
    <string name="downloadText">心动不如行动 , 有喜欢的歌曲就快下载吧</string>

</resources>
