<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_headMessage_icon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_margin="12dp"
        android:src="@mipmap/default_image" />

    <TextView
        android:id="@+id/item_headMessage_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/item_headMessage_icon"
        android:layout_toLeftOf="@+id/item_headMessage_reply"
        android:layout_toRightOf="@+id/item_headMessage_icon"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/nickname"
        android:textColor="@color/colorShallowBlack"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/item_headMessage_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_headMessage_nickname"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/item_headMessage_icon"
        android:text="@string/time"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/item_headMessage_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_headMessage_time"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/item_headMessage_icon"
        android:text="@string/content"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/item_headMessage_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/item_headMessage_nickname"
        android:layout_marginRight="10dp"
        android:text="@string/reply"
        android:textColor="@color/colorShallowBlack"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignLeft="@+id/item_headMessage_nickname"
        android:layout_alignRight="@+id/item_headMessage_reply"
        android:layout_below="@+id/item_headMessage_content"
        android:background="@color/colorLightGray" />

</RelativeLayout>